### Voltaire's Nightmare Changelog ###

# v 2.2.2 #

-Updated the mod to EU4 version 1.31.5
-Added new mission tree for Khazaria and Huns with 25 missions (contribution by RetrogMGXII)
-Added new mission tree for Cornwall with 17 missions
-Added new mission tree for Teutonic Order & Livonian Order with 32 missions
-Reworked the following mission trees: Toulouse, Palatinate (thanks to FrenchKnight), Worms
-Small fixes for the following mission trees: Brandenburg, Denmark, Altsachsen, Aragon, Frisia, England, Ifriqiya, Sicily, Athens, France, Berg/Cleves/Julich, Milan, Papal States, Venice, Hungary, Volga Bulgaria, Sweden, Baghdad, Seljuks, Apulia, Crusader RELs
-Added the following monuments and associated events: Kaiserdom of Speyer, Polish Royal Salt Mines, Winter Palace of Neva, Krak des Chevaliers, Tsarevets of Tarnovo, Piazza of Venice, Cathedral of Florence, Brandenburg Gate, Charles Bridge of Prague, Temple of Imam Ali, Rock of Cashel, Theodosian Walls (contributed by Alexios Komnenos)
-Added Gurus to Batinism replacing Piety
-Added Ancestral Worship to Suomenusko and Mauusko replacing Personal Deities
-Overhauled the following custom event sets: Baltic Pagan
-Eliminated generic unit models for many cultures when owning the respective unit packs
-Added the following alternative country names: Tarki (Huns), Sabbioneta (Cremona), Aragvi (Dvals)
-Added 2 new estate privileges: 1 for Dutch nations (Dutch Water Lines/Burghers), 1 for steppe tribal nations (Steppe Colonization/Tribes) 
-Added 9 new policies, combining the new 1.31 idea groups with the custom idea sets of VN
-Added 9 more loading tips
-Added triggered province modifier for the Druze sanctuary of Nabi Shu'ayb
-Baltic Order techs should be definitively fixed now as the previous fix was not properly implemented... please let this be the last time.
-German culture can spread in the Baltics when controlled by German tags