@@ -1764,3 +1764,40 @@ marchigian_ideas = {
         production_efficiency = 0.1
     }
 }
+
+BDK_ideas = {
+    start = {
+        shock_damage_received = -0.1
+        global_unrest = -1
+    }
+    bonus = {
+        light_ship_power = 0.25
+    }
+    
+    trigger = {
+        tag = BDK
+    }
+    free = yes
+
+    BDK_idea_1 = {
+       hostile_attrition = 1
+    }
+    BDK_idea_2 = {
+        ae_impact = -0.1
+    }
+    BDK_idea_3 = {
+        global_spy_defence = 0.2
+    }
+    BDK_idea_4 = {
+       nobles_loyalty_modifier = 0.1
+    }
+    BDK_idea_5 = {
+        naval_forcelimit_modifier = 0.25
+    }
+    BDK_idea_6 = {
+        fire_damage = 0.1
+    }
+    BDK_idea_7 = {
+        diplomatic_upkeep = 1
+    }
+}
