@@ -7075,3 +7075,21 @@
  altSAX_idea_6_desc: "The Kaiserpfalz Goslar was so impressive after being built in the 11th century that visitors marveled at the imperial residence. The chronicler Lambert of Hersfeld noted that Kaiserpfalz Goslar was the most famous residence in the empire."
  altSAX_idea_7: "Remember the Saxon Wars"
  altSAX_idea_7_desc: "Old Saxony put up decades of struggles during the Carolingian invasion, in which the Saxons converted to Christianity. The legacy of our hard-fought struggle shall endure within the memories of the Saxons."
+#Bederkesa
+ BDK_ideas: "Bederkeser Ideas"
+ BDK_ideas_start: "Bederkeser Traditions"
+ BDK_ideas_bonus: "Bederkeser Ambition"
+ BDK_idea_1: "On the Geest"
+ BDK_idea_1_desc: "While Bederkesa may consider its location on the unfertile wetlands a curse, it is a blessing as well. Many unwary invaders will find their end in bogs and lakes of the Geest before reaching Bederkeser Castle."
+ BDK_idea_2: "Lords by the Northern Sea"
+ BDK_idea_2_desc: "Threats Bederkesa has a plenty. Wild Danes and Frisians come from the sea, raiding and plundering, while allegedly more civilised burghers and bishops of Bremen and Hamburg seek to expand their holdings. If our lordship is to survive, we have to expand beyond our allodial domain."
+ BDK_idea_3: "Episcopal Elopement"
+ BDK_idea_3_desc: "Literate clergymen are cunning beasts, skilled in the art of forgery and deceit. We need to learn the ropes and counter their manipulations with our documents and obstinacy."
+ BDK_idea_4: "Embrace Raubritter Identity"
+ BDK_idea_4_desc: "Frisians, Danes, peasants, bishops, burghers – everbody around steals, so why shouldn’t we? There is no more efficient way to develop our barren estates than a good dose of brigandage. Our knights extort enough from richer neighbours to be content with their lot."
+ BDK_idea_5: "Take Control of the Estuaries"
+ BDK_idea_5_desc: "Our land is nestled between Weser and Elbe estuaries. If we were to intercept both Bremener and Hamburger trade routes, we could dictate the terms on which our states would coexist. To achieve that, we need a substantial fleet."
+ BDK_idea_6: "Jaegers"
+ BDK_idea_6_desc: "Possesing such an unhospitable terrain, it would be unwise not to train part of our soldiers adequatly, so that they can fight in loose formation and harrass advancing enemy forces."
+ BDK_idea_7: "Bad Bederkesa"
+ BDK_idea_7_desc: "The mud we abjured so badly had proven beneficial for human health and complexion. Let us spare no effort to make Bederkesa a resort frequented by upper crust of European society and profit from extended possibilities that follow."
