@@ -7115,3 +7115,21 @@
  altSAX_idea_6_desc: "Die Kaiserpfalz Goslar war nach ihrem Bau im 11. Jahrhundert so beeindruckend, dass die Besucher die kaiserliche Residenz in vollem Umfang bestaunten. Der Chronist Lambert von Hersfeld stellte fest, dass die Kaiserpfalz Goslar die berühmteste Residenz des Reiches war."
  altSAX_idea_7: "Erinnert die Sachsenkriege"
  altSAX_idea_7_desc: "Altsachsen hat während des karolingischen Einmarsches, in dem die Sachsen zum Christentum konvertierten, jahrzehntelang gekämpft. Das Erbe unseres harten Kampfes soll in der Erinnerung der Sachsen fortbestehen."
+#Bederkesa
+ BDK_ideas: "Bederkeser Ideen"
+ BDK_ideas_start: "Bederkeser Traditionen"
+ BDK_ideas_bonus: "Bederkeser Ambitionen"
+ BDK_idea_1: "Auf der Geest"
+ BDK_idea_1_desc: "Auch wenn Bederkesa seine Lage in den unfruchtbaren Auen als Fluch empfindet, so ist sie doch auch ein Segen. Viele unvorsichtige Eindringlinge finden ihr Ende in den Sümpfen und Seen der Geest, noch bevor sie die Bederkeser Burg erreichen können."
+ BDK_idea_2: "Herren an der Nordsee"
+ BDK_idea_2_desc: "Bedrohungen gibt es in Bederkesa zuhauf. Wilde Dänen und Friesen kommen von der See, um zu plündern und zu brandschatzen, während die angeblich zivilisierteren Bürger und Bischöfe von Bremen und Hamburg versuchen, ihren Besitz zu vergrößern. Wenn unser Herrschaftsgebiet überleben soll, müssen wir über unser allodiales Gebiet hinaus expandieren."
+ BDK_idea_3: "Flucht vor den Bischöfen"
+ BDK_idea_3_desc: "Gebildete Geistliche sind gerissene Bestien, die die Kunst der Fälschung und des Betrugs beherrschen. Wir müssen lernen, damit umzugehen, und ihre Manipulationen mit unseren Dokumenten und unserer Hartnäckigkeit kontern."
+ BDK_idea_4: "Förderung einer Raubritter-Identität"
+ BDK_idea_4_desc: "Friesen, Dänen, Bauern, Bischöfe, Bürger - alle Welt stiehlt, warum also nicht auch wir? Es gibt kein wirksameres Mittel zur Entwicklung unserer kargen Ländereien als eine gute Dosis Räuberei. Unsere Ritter erpressen genug von den reicheren Nachbarn, dass sie mit ihrem Glück zufrieden sind."
+ BDK_idea_5: "Übernahme der Kontrolle über die Flussmündungen"
+ BDK_idea_5_desc: "Unser Land liegt eingebettet zwischen Weser- und Elbmündung. Wenn wir sowohl die Bremer als auch die Hamburger Handelswege abfangen, können wir die Bedingungen für das Zusammenleben unserer Staaten vorgeben. Dafür brauchen wir eine große Flotte."
+ BDK_idea_6: "Jäger"
+ BDK_idea_6_desc: "In einem so ungünstigen Terrain wäre es unklug, einen Teil unserer Soldaten nicht entsprechend auszubilden, damit sie in loser Formation kämpfen und vorrückende feindliche Truppen in Bedrängnis bringen können."
+ BDK_idea_7: "Bad Bederkesa"
+ BDK_idea_7_desc: "Der Schlamm, den wir so verschmäht haben, hat sich als vorteilhaft für die Gesundheit und den Teint der Menschen erwiesen. Wir sollten keine Mühen scheuen, um Bederkesa zu einem Ferienort zu machen, der von der gehobenen Klasse der europäischen Gesellschaft besucht wird, und von den sich daraus ergebenden Möglichkeiten profitieren." 
