@@ -3,6 +3,7 @@
 # v 2.2.2 #
 
 -Updated the mod to EU4 version 1.31.5
+-Added the following new National Idea sets: Bederkesa (contributed by Yannick)
 -Added new mission tree for Khazaria and Huns with 25 missions (contribution by RetrogMGXII)
 -Added new mission tree for Cornwall with 17 missions
 -Added new mission tree for Teutonic Order & Livonian Order with 32 missions
